Fix single diagram extra spacing. 2nd diagram on mobile.

--- a/site/src/components/diagrams/Diagrams.module.css
+++ b/site/src/components/diagrams/Diagrams.module.css
@@ -5,12 +5,17 @@
   margin-block: var(--salt-spacing-300);
   grid-template-rows:
     [text-container] min-content
+    [image] min-content
+    [text-container] min-content
     [image] min-content;
 }
 
 @media screen and (min-width: 960px) {
   .diagramsContainer {
     grid-template-columns: repeat(2, 1fr);
+    grid-template-rows:
+      [text-container] min-content
+      [image] min-content;
   }
 }
 
@@ -28,17 +33,14 @@
 }
 
 .diagram {
-  display: grid;
-  grid-template-columns: [image text-container] 1fr;
-
-  grid-template-rows:
-    [text-container] min-content
-    [image] min-content;
+  display: flex;
+  flex-direction: column;
   margin-block: var(--salt-spacing-300);
   gap: var(--salt-spacing-100);
 }
 
 .diagramsContainer > .diagram {
+  display: grid;
   grid: subgrid / subgrid;
   grid-row: span 2; /* span parent 2 rows with text-container & image */
 }
